--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "start": "cross-env NODE_ENV=production node index.js",
     "dev": "cross-env NODE_ENV=development nodemon index.js",
-    "test": "cross-env NODE_ENV=test jest --verbose runInBand",
     "build:ui": "rm -rf build && cd ../frontend && npm run build && cp -r build ../backend",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "cross-env NODE_ENV=test jest --verbose --runInBand"
   },
   "author": "",
   "license": "ISC",
@@ -29,6 +29,6 @@
   },
   "jest": {
     "testEnvironment": "node",
-    "globalTeardown" : "./test/teardown.js"
+    "globalTeardown": "./tests/teardown.js"
   }
 }
